Project

General

Profile

Actions

Bug #18754

closed

multimds: MDCache.cc: 8569: FAILED assert(!info.ancestors.empty())

Added by Patrick Donnelly about 7 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
multimds
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-01-31T17:10:36.356 INFO:tasks.ceph.mds.c.mira111.stderr:/build/ceph-11.1.0-7091-g326a113/src/mds/MDCache.cc: In function 'void MDCache::do_open_ino(inodeno_t, MDCache::open_ino_info_t&, int)' thread 7f95997d1700 time 2017-01-31 17:10:36.375760
2017-01-31T17:10:36.356 INFO:tasks.ceph.mds.c.mira111.stderr:/build/ceph-11.1.0-7091-g326a113/src/mds/MDCache.cc: 8569: FAILED assert(!info.ancestors.empty())
2017-01-31T17:10:36.360 INFO:tasks.ceph.mds.c.mira111.stderr: ceph version 11.1.0-7091-g326a113 (326a11362f76098867add4557a03a45a219a640c)
2017-01-31T17:10:36.360 INFO:tasks.ceph.mds.c.mira111.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x102) [0x55d3e8b9d282]
2017-01-31T17:10:36.360 INFO:tasks.ceph.mds.c.mira111.stderr: 2: (MDCache::do_open_ino(inodeno_t, MDCache::open_ino_info_t&, int)+0x30b) [0x55d3e895e98b]
2017-01-31T17:10:36.360 INFO:tasks.ceph.mds.c.mira111.stderr: 3: (MDCache::do_open_ino_peer(inodeno_t, MDCache::open_ino_info_t&)+0x799) [0x55d3e89607b9]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 4: (MDCache::do_open_ino(inodeno_t, MDCache::open_ino_info_t&, int)+0x186) [0x55d3e895e806]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 5: (MDCache::do_open_ino_peer(inodeno_t, MDCache::open_ino_info_t&)+0x799) [0x55d3e89607b9]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 6: (MDCache::handle_open_ino_reply(MMDSOpenInoReply*)+0x3cc) [0x55d3e896335c]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 7: (MDCache::dispatch(Message*)+0x55) [0x55d3e8991c25]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 8: (MDSRank::handle_deferrable_message(Message*)+0x66c) [0x55d3e887695c]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 9: (MDSRank::_dispatch(Message*, bool)+0x21f) [0x55d3e8880d9f]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 10: (MDSRankDispatcher::ms_dispatch(Message*)+0x15) [0x55d3e8881fb5]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 11: (MDSDaemon::ms_dispatch(Message*)+0x1db) [0x55d3e886f1fb]
2017-01-31T17:10:36.361 INFO:tasks.ceph.mds.c.mira111.stderr: 12: (DispatchQueue::entry()+0xf4a) [0x55d3e8dd2dea]
2017-01-31T17:10:36.362 INFO:tasks.ceph.mds.c.mira111.stderr: 13: (DispatchQueue::DispatchThread::entry()+0xd) [0x55d3e8c1ab1d]
2017-01-31T17:10:36.362 INFO:tasks.ceph.mds.c.mira111.stderr: 14: (()+0x76ba) [0x7f959e8716ba]
2017-01-31T17:10:36.362 INFO:tasks.ceph.mds.c.mira111.stderr: 15: (clone()+0x6d) [0x7f959daec82d]

From: http://pulpito.ceph.com/pdonnell-2017-01-31_17:01:56-multimds:thrash-wip-multimds-tests-testing-basic-mira/769767/

Logs and coredump copied to: /ceph/tmp/pdonnell/multimds-thrash/769767

Actions #2

Updated by Zheng Yan about 7 years ago

  • Status changed from Fix Under Review to Resolved

commit 20d43372 (mds: drop superfluous MMDSOpenInoReply)

Actions #3

Updated by Patrick Donnelly about 5 years ago

  • Category deleted (90)
  • Labels (FS) multimds added
Actions

Also available in: Atom PDF