mds: drop superfluous MMDSOpenInoReply

Superfluous MMDSOpenInoReply can causes MDCache::handle_open_ino_reply()
to call MDCache::do_open_ino() in improper state.

Fixes: http://tracker.ceph.com/issues/18754
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>